Fixed styling and spacing of divs
Fixed the styling and spacing of divs and all the contents in it

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/br-cobane');
+
 * {
     box-sizing: border-box;
     border-collapse: collapse;
 }
 body {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Poppins', sans-serif;
     background-image: url("assets/bg-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,21 +14,74 @@ body {
     display: flex;
     justify-content: center;
     margin: 0;
+    --left-indention: 3rem;
 }
 
 .left-section {
     width: 40vw;
 }
 .right-section {
-    background: #F9FAFB;
+    background-color: #F9FAFB;
     height: 100vh;
     width: 60vw;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    justify-content: center;
+    gap: 2rem;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
-.right-info {
-    
+.right-intro{
+    max-width: 60ch;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: var(--left-indention);
+    margin-bottom: 2rem;
 }
+
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+ul li {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    font-weight: 200;
+}
+
+.contact-info {
+    display: flex;
+    font-size: .7rem;
+    margin: 0;
+}
+
+.input-container {
+    box-shadow: 10px 10px 10px #E5E6E7, 0 0 0.9em #e5e6e7;
+    background-color: #FFFFFF;
+    padding: 1.5rem;
+}
+
+.input-container span{
+    padding-left: 1.5rem;
+}
+
+.create-account {
+    margin-top: 2rem;
+    padding-left: var(--left-indention);
+}
+
+.right-login {
+    padding-left: var(--left-indention);
+}
+
+
+
+
+
 
